force-app/main/default/objects/cogn__Clean_Job_Item__c/cogn__Clean_Job_Item__c.object-meta.xml
<CustomObject>
    <label>Cognism Refresh</label>
    <nameField>
        <label>Cognism Refresh Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cognism Refresh</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>