force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__Applied__c.field-meta.xml
<CustomField>
    <fullName>cogn__Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applied</label>
    <type>Checkbox</type>
</CustomField>