force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__Clean_Job__c.field-meta.xml
<CustomField>
    <fullName>cogn__Clean_Job__c</fullName>
    <label>Cognism Refresh</label>
    <referenceTo>cogn__Clean_Job__c</referenceTo>
    <relationshipLabel>Clean Job Items</relationshipLabel>
    <relationshipName>Clean_Job_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>