force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__Contact__c.field-meta.xml
<CustomField>
    <fullName>cogn__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Clean_Job_Items</relationshipName>
    <type>Lookup</type>
</CustomField>