force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__gdpr__c.field-meta.xml
<CustomField>
    <fullName>cogn__gdpr__c</fullName>
    <label>gdpr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>