force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__is_Company_Changed__c.field-meta.xml
<CustomField>
    <fullName>cogn__is_Company_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Company Changed</label>
    <type>Checkbox</type>
</CustomField>