force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__Lead__c.field-meta.xml
<CustomField>
    <fullName>cogn__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Clean_Job_Items</relationshipName>
    <type>Lookup</type>
</CustomField>