force-app/main/default/objects/cogn__Clean_Job_Item__c/fields/cogn__Matched__c.field-meta.xml
<CustomField>
    <fullName>cogn__Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matched</label>
    <type>Checkbox</type>
</CustomField>